# pycoin

./: .coverage  .gitignore  .travis.yml  BIP32.txt  CHANGES  COMMAND-LINE-TOOLS.md  CREDITS  Electrum-migration.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  Makefile  README.md  TESTING.txt  because-im-curious-txt  index.html  mkdocs.yml  mypy.ini  params.json  pip-req.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test-py2.7.sh  test.sh  tox.ini
.github/agents/: opus.agent.md
.github/prompts/: ask-opus.prompt.md
.github/workflows/: format-check.yml  mypy.yml  publish-to-test-pypi.yml  test-py27.yml  test.yml
docs/: Makefile  api.md  api.rst  bitcoin.md  bitcoin.rst  cmdtools.md  cmdtools.rst  conf.py  getting-started.rst  index.md  index.rst  install.md  install.rst  make.bat  parseapi.rst  reference.rst
docs/explanation/: design-philosophy.md
docs/how-to/: bip32-keys.md  multisig.md  sign-a-transaction.md
docs/source/: contract.md  contract.rst  parseapi.rst  pycoin.blockchain.rst  pycoin.cmds.rst  pycoin.contrib.rst  pycoin.convention.rst  pycoin.ecdsa.md  pycoin.ecdsa.rst  pycoin.key.rst  pycoin.message.rst  pycoin.networks.Contract.rst  pycoin.networks.rst  pycoin.rst  pycoin.serialize.rst  pycoin.services.md  pycoin.services.rst  pycoin.tools.rst  pycoin.tx.pay_to.rst  pycoin.tx.rst  pycoin.tx.script.rst  pycoin.wallet.rst  recipes.md  recipes.multisig.rst  recipes.rst  tests.rst
docs/tutorials/: first-transaction.md  getting-started.md
examples/: rpi_server.py  rpi_signer.py
pycoin/: __init__.py  block.py  bloomfilter.py  encoding.py  intbytes.py  merkle.py  networks.py  py.typed  standard_tx_out_script.py  transact.py  ui.py  version.py  wallet.py
pycoin/base/: BaseBlock.py  BaseSpendable.py  BaseTx.py  BaseTxIn.py  BaseTxOut.py  merkle.py  tx_utils.py
pycoin/blockchain/: BlockChain.py  ChainFinder.py
pycoin/cmds/: b58.py  block.py  cache_tx.py  coinc.py  dump.py  fetch_unspent.py  keychain.py  ku.py  msg.py  p2m.py  tx.py
pycoin/coins/: SolutionChecker.py  Tx.py  TxIn.py  TxOut.py  VM.py  exceptions.py  tx_utils.py
pycoin/contrib/: bech32m.py  msg_signing.py  ripemd160.py  segwit_addr.py  who_signed.py
pycoin/convention/: __init__.py  tx_fee.py
pycoin/crack/: bip32.py  ecdsa.py
pycoin/ecdsa/: Curve.py  Generator.py  Group.py  Point.py  Secp256k1Group.py  __init__.py  bls12_381_g1.py  ecdsa.py  ellipticcurve.py  encrypt.py  intbytes.py  intstream.py  nistp256.py  numbertheory.py  rfc6979.py  secp256k1.py  secp256r1.py
pycoin/encoding/: __init__.py  b58.py  base_conversion.py  bytes32.py  exceptions.py  hash.py  hexbytes.py  sec.py
pycoin/key/: BIP32Node.py  BIP49Node.py  BIP84Node.py  HDSeed.py  HierarchicalKey.py  Key.py  Keychain.py  __init__.py  bip32.py  electrum.py  key_from_text.py  msg_signing.py  paths.py  subpaths.py  validate.py
pycoin/keychain/: Keychain.py  RAMKeychain.py  SQLKeychain.py
pycoin/message/: InvItem.py  PeerAddress.py  make_parser_and_packer.py
pycoin/netcodes/: __init__.py  btc.py
pycoin/network/: InvItem.py  PeerAddress.py  message.py  networks.py
pycoin/networks/: AddressAPI.py  Contract.py  ContractAPI.py  ParseAPI.py  ScriptAPI.py  __init__.py  all.py  bitcoinish.py  default.py  legacy_networks.py  netcodes.py  network.py  parseable_str.py  registry.py
pycoin/pay_to/: ScriptMultisig.py  ScriptNulldata.py  ScriptPayToAddress.py  ScriptPayToPublicKey.py  ScriptPayToScript.py  ScriptType.py  ScriptUnknown.py  __init__.py
pycoin/satoshi/: IntStreamer.py  __init__.py  checksigops.py  der.py  errno.py  flags.py  intops.py  miscops.py  opcodes.py  satoshi_int.py  satoshi_streamer.py  satoshi_string.py  satoshi_struct.py  stackops.py
pycoin/script/: check_signature.py  der.py  disassemble.py  flags.py  microcode.py  opcodes.py  tools.py  vm.py
pycoin/scripts/: bd.py  bitcoin_utils.py  block.py  bu_coinbase.py  bu_unspent.py  cache_tx.py  check_tx.py  create_tx.py  create_unsigned_xfer_tx.py  dump_block.py  dump_tx.py  fetch_tx.py  fetch_unspent.py  genwallet.py  ku.py  sign_tx.py  simple_create_tx.py  simple_sign_tx.py  spend.py  tx.py
pycoin/serialize/: __init__.py  bitcoin_streamer.py  streamer.py
pycoin/services/: __init__.py  agent.py  bitcoind.py  biteasy.py  blockchain_info.py  blockcypher.py  blockexplorer.py  blockr_io.py  blockrio.py  blokrio.py  btgexp.py  chain.py  chain_com.py  chain_so.py  env.py  insight.py  providers.py  tx_cache.py  tx_db.py
pycoin/solve/: ConstraintSolver.py  constraints.py  solve.py  some_solvers.py  utils.py
pycoin/symbols/: arg.py  axe.py  bc.py  bch.py  bsd.py  btc.py  btcd.py  btdx.py  btg.py  btx.py  cha.py  chc.py  dash.py  dcr.py  dcrt.py  dfc.py  dgb.py  doge.py  fai.py  ftc.py  ftx.py  grs.py  grsrt.py  jbs.py  ltc.py  mec.py  mona.py  myr.py  mzc.py  pivx.py  polis.py  ric.py  stak.py  strat.py  tbtx.py  tchc.py  tdash.py  tgrs.py  tmona.py  tpivx.py  (+13 more)
pycoin/test/: altcoins_test.py  bip32_test.py  build_tx_test.py  ecdsa_test.py  encoding_test.py  key_test.py  key_translation_test.py  key_validate_test.py  msg_signing_test.py  parse_block_test.py  pay_to_test.py  scripts_test.py  sighash_single_test.py  signature_test.py  spend_test.py  tx_test.py  tx_utils_test.py  validate_tx_test.py  wallet_test.py
pycoin/tx/: Tx.py  (+11 more)
recipes/: README.md
tests/: __init__.py  address_for_script_test.py  annotate_test.py  bc_transaction_test.py  bech32_test.py  bip32_test.py  blockchain_test.py  bloomfilter_test.py  build_tx_test.py  chainfinder_test.py  cmds_test.py  crack_bip32_test.py  crack_sig_test.py  disassemble_test.py  ecdsa_test.py  electrum_test.py  encoding_test.py  group_test.py  hexbytes.py  imports_test.py  key_test.py  key_translation_test.py  key_validate_test.py  keychain_test.py  keyparser_test.py  libsecp256k1_test.py  litecoin_mweb_test.py  message_test.py  msg_signing_test.py  multisig_individual_test.py  multisig_order_test.py  nist256p_test.py  parse_block_test.py  parse_test.py  pay_to_multisig.py  pay_to_test.py  scripts_test.py  segwit_test.py  serialize_test.py  sighash_single_test.py  (+15 more)
tools/: Tx_from_hash.py
(+308 files in other folders)
