[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.5.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
# Formatted with: ruff format . (ruff 0.15.8)
# To verify no semantic changes: ruff format --check .

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["E402"]
