[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycoin"
dynamic = ["version"]
description = "Utilities for Bitcoin and altcoin addresses and transaction manipulation."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Richard Kiss", email = "him@richardkiss.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/richardkiss/pycoin"

[project.scripts]
block = "pycoin.cmds.block:main"
ku = "pycoin.cmds.ku:main"
tx = "pycoin.cmds.tx:main"
msg = "pycoin.cmds.msg:main"
keychain = "pycoin.cmds.keychain:main"
b58 = "pycoin.cmds.b58:main"
coinc = "pycoin.cmds.coinc:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
include = ["pycoin*"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

# Modules are listed in dependency order.
# Uncomment each section as it gets typed and cleaned up.

[[tool.mypy.overrides]]
module = "pycoin.encoding.*"
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
strict_optional = true

# [[tool.mypy.overrides]]
[[tool.mypy.overrides]]
module = "pycoin.ecdsa.*"
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
strict_optional = true

[[tool.mypy.overrides]]
module = "pycoin.satoshi.*"
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
strict_optional = true

[[tool.mypy.overrides]]
module = "pycoin.serialize.*"
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["pycoin.merkle", "pycoin.block", "pycoin.bloomfilter"]
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["pycoin.convention", "pycoin.convention.*"]
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "pycoin.key.subpaths",
    "pycoin.key.bip32",
    "pycoin.key.HDSeed",
    "pycoin.key.HierarchicalKey",
    "pycoin.key.BIP49Node",
    "pycoin.key.BIP84Node",
    "pycoin.solve.utils",
    "pycoin.coins.SolutionChecker",
    "pycoin.coins.TxIn",
    "pycoin.coins.TxOut",
    "pycoin.vm.ConditionalStack",
    "pycoin.coins.groestlcoin.hash",
    "pycoin.coins.groestlcoin.Block",
    "pycoin.coins.bgold.SolutionChecker",
    "pycoin.coins.bgold.Solver",
    "pycoin.coins.bcash.Solver",
    "pycoin.coins.bcash.SolutionChecker",
    "pycoin.coins.litecoin",
]
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
strict_optional = true

# [[tool.mypy.overrides]]
# module = "pycoin.key.*"
# disallow_untyped_defs = true
# disallow_any_generics = true
# warn_return_any = true
# strict_optional = true

# [[tool.mypy.overrides]]
# module = "pycoin.coins.*"
# disallow_untyped_defs = true
# disallow_any_generics = true
# warn_return_any = true
# strict_optional = true

# [[tool.mypy.overrides]]
# module = "pycoin.vm.*"
# disallow_untyped_defs = true
# disallow_any_generics = true
# warn_return_any = true
# strict_optional = true

# [[tool.mypy.overrides]]
# module = "pycoin.solve.*"
# disallow_untyped_defs = true
# disallow_any_generics = true
# warn_return_any = true
# strict_optional = true

# [[tool.mypy.overrides]]
# module = ["pycoin.contrib.*", "pycoin.convention.*"]
# disallow_untyped_defs = true
# disallow_any_generics = true
# warn_return_any = true
# strict_optional = true

# [[tool.mypy.overrides]]
# module = "pycoin.networks.*"
# disallow_untyped_defs = true
# disallow_any_generics = true
# warn_return_any = true
# strict_optional = true

# [[tool.mypy.overrides]]
# module = "pycoin.symbols.*"
# disallow_untyped_defs = true
# disallow_any_generics = true
# warn_return_any = true
# strict_optional = true

# [[tool.mypy.overrides]]
# module = "pycoin.message.*"
# disallow_untyped_defs = true
# disallow_any_generics = true
# warn_return_any = true
# strict_optional = true

# [[tool.mypy.overrides]]
# module = "pycoin.services.*"
# disallow_untyped_defs = true
# disallow_any_generics = true
# warn_return_any = true
# strict_optional = true

# [[tool.mypy.overrides]]
# module = ["pycoin.crack.*", "pycoin.tools.*", "pycoin.wallet.*"]
# disallow_untyped_defs = true
# disallow_any_generics = true
# warn_return_any = true
# strict_optional = true

# [[tool.mypy.overrides]]
# module = "pycoin.cmds.*"
# disallow_untyped_defs = true
# disallow_any_generics = true
# warn_return_any = true
# strict_optional = true

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
# Formatted with: ruff format . (ruff 0.15.8)
# To verify no semantic changes: ruff format --check .

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["E402"]
